[IMP] web: fix alignment of progress-bar
 Steps:
 - Open Appraisals
 - Go to Skills
 - Add new skill
 - Progress-bar was left-aligned in both rtl and ltr mode

 Issue:
 - progress-bar should always aligned to the right (it should be to
  the left only in rtl mode) in list view.In rtl mode, white space coming
  before progress-bar.Progress-bar with different percentage values
  was not aligned.

 Cause:
 - the progress bar alignment was inconsistent, especially when dealing
   with RTL languages.

 Fix:
 - By justifying the content of progress-bar to flex-end and of rtl mode to
  flex-start  Applying min-width to progress-bar value.
 Task: 3525850

X-original-commit: 52a90d638b79f313c6803b09e54b721eeee2e2fa

--- a/addons/web/static/src/views/fields/progress_bar/progress_bar_field.scss
+++ b/addons/web/static/src/views/fields/progress_bar/progress_bar_field.scss
@@ -28,6 +28,19 @@
     .o_progressbar {
         // Force progress bars to respect table's layout
         display: table-row;
+        justify-content: flex-end;
+        .o_rtl & {
+            justify-content: flex-start;
+            text-align: right;
+        }
+        .o_progressbar_value {
+            span {
+                min-width: 1.5rem;
+            }
+            span:last-child{
+                text-align: left;
+            }
+        }
     }
 }
 
